// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullfillmentSection should render correctly should render component 1`] = `
<StyledNativeComponent
  buttonLabel="labelsText"
  closeQuickViewClick={false}
  currentProduct="12345"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "buttonLabel": "",
        "closeQuickViewClick": [Function],
        "isAnchor": false,
      },
      "attrs": Array [],
      "displayName": "Styled(FulfillmentSection)",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          "
  &.fulfillment-section {
    padding-top: ",
          [Function],
          ";
    padding-left: 57px;
    padding-right: 50px;
    padding-bottom: ",
          [Function],
          ";

    @media ",
          [Function],
          " {
      padding-left: 90px;
      padding-right: 89px;
    }

    @media ",
          [Function],
          " {
      width: 100%;
    }

    @media ",
          [Function],
          " {
      padding-top: 15px;
      padding-left: 72px;
      padding-right: 70px;
      padding-bottom: ",
          [Function],
          ";
    }
  }
",
          ";
  ",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  isAnchor={false}
  onPickUpOpenClick={[MockFunction]}
/>
`;

exports[`FullfillmentSection should render correctly should render component with anchor 1`] = `
<StyledNativeComponent
  buttonLabel="labelsText"
  closeQuickViewClick={false}
  currentProduct="12345"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "buttonLabel": "",
        "closeQuickViewClick": [Function],
        "isAnchor": false,
      },
      "attrs": Array [],
      "displayName": "Styled(FulfillmentSection)",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          "
  &.fulfillment-section {
    padding-top: ",
          [Function],
          ";
    padding-left: 57px;
    padding-right: 50px;
    padding-bottom: ",
          [Function],
          ";

    @media ",
          [Function],
          " {
      padding-left: 90px;
      padding-right: 89px;
    }

    @media ",
          [Function],
          " {
      width: 100%;
    }

    @media ",
          [Function],
          " {
      padding-top: 15px;
      padding-left: 72px;
      padding-right: 70px;
      padding-bottom: ",
          [Function],
          ";
    }
  }
",
          ";
  ",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  isAnchor={true}
  onPickUpOpenClick={[MockFunction]}
/>
`;
